[package]
name = "ip-nosqd-dev"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1"
maxminddb = {version = "0.27.3", features = ["mmap"]}
axum-client-ip = "1.3.1"
